thrasyboulos/hydor/overlays/hellas/alexandreia/dionysios/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: dionysios
  namespace: alexandreia
spec:
  ports:
  - name: http
    port: 5000
    targetPort: http
  - name: grpc
    port: 50060
    targetPort: grpc
  selector:
    app: dionysios
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    volumes.odysseia.io/secrets: "true"
  labels:
    app: dionysios
  name: dionysios
  namespace: alexandreia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dionysios
  template:
    metadata:
      annotations:
        odysseia-greek/access: grammar
        odysseia-greek/role: api
        perikles/accesses: solon;eratosthenes;aristarchos;kallimachos
      labels:
        app: dionysios
        release: dionysios
        version: v0.2.4
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: ELASTIC_ACCESS
          valueFrom:
            fieldRef:
              fieldPath: metadata.annotations['odysseia-greek/access']
        - name: VERSION
          valueFrom:
            fieldRef:
              fieldPath: metadata.labels['version']
        image: ghcr.io/odysseia-greek/dionysios:v0.2.4
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 20
          periodSeconds: 20
        name: dionysios
        ports:
        - containerPort: 5000
          name: http
        - containerPort: 50060
          name: grpc
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
          initialDelaySeconds: 1
          periodSeconds: 20
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts: []
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ghcr.io/odysseia-greek/aristophanes:v0.7.2
        imagePullPolicy: Always
        name: aristophanes
        ports:
        - containerPort: 50052
        resources:
          limits:
            memory: 32Mi
          requests:
            memory: 32Mi
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: ghcr.io/odysseia-greek/aristides:v0.0.4
        imagePullPolicy: Always
        name: aristides
        ports:
        - containerPort: 50051
        resources:
          limits:
            memory: 32Mi
          requests:
            memory: 32Mi
        volumeMounts:
        - mountPath: /app/config/vault
          name: vault-server-tls
          readOnly: true
        - mountPath: /app/config/solon
          name: solon-certs
          readOnly: true
      volumes:
      - name: solon-certs
        secret:
          secretName: solon-tls-certs
      - name: vault-server-tls
        secret:
          secretName: vault-server-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dionysios-route
  namespace: alexandreia
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`hellas.odysseia-greek`) && PathPrefix(`/dionysios/v1`)
    services:
    - name: dionysios
      port: 5000
