thrasyboulos/hydor/overlays/hellas/alexandreia/dionysios/ir.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dionysios-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hellas.odysseia-greek`) && PathPrefix(`/dionysios/v1`)
      kind: Rule
      services:
        - name: dionysios
          port: 5000
